--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/Css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     
   </head>
   <body>
@@ -924,7 +924,7 @@ My achievements include building and deploying over 15 full-stack web projects, 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
-    <script src="JavaScript/script.js"></script>
+    <script src="script.js"></script>
 
 
     <!-- Share Popup -->
