--- a/index.html
+++ b/index.html
@@ -938,6 +938,74 @@ My achievements include building and deploying over 15 full-stack web projects, 
 </div>
    </div>
 
+
+       <!-- Floating Action Buttons -->
+    <div class="floating-actions">
+        <button class="fab chat-fab" id="chatFab" title="AI Assistant">
+            <span class="fab-icon">🤖</span>
+            <span class="fab-text">AI Chat</span>
+        </button>
+    </div>
+       <!-- Advanced Chatbot -->
+    <div class="chatbot hidden" id="chatbot">
+        <div class="chatbot-header">
+            <div class="chatbot-profile">
+                <div class="bot-avatar">🤖</div>
+                <div class="bot-info">
+                    <h4>Anubhav's AI Assistant</h4>
+                    <span class="bot-status">Online</span>
+                </div>
+            </div>
+            <button class="chatbot-close" id="chatbotClose">&times;</button>
+        </div>
+
+        <div class="chatbot-messages" id="chatMessages">
+            <div class="welcome-message">
+                <div class="bot-avatar">🤖</div>
+                <div class="message-content">
+                    <p id="message-content-color">👋 Hi! I'm Anubhav's AI assistant. I am hear to help you:</p>
+                    <ul>
+                        <li id="message-content-color">🚀 Projects & Technical Work</li>
+                        <li id="message-content-color">⚡ Skills & Technologies</li>
+                        <li id="message-content-color">🎓 Education & Background</li>
+                        <li id="message-content-color">📞 Contact Information</li>
+                    </ul>
+                    <p id="message-content-color">What would you like to know?</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="chatbot-input">
+            <div class="input-container">
+                <input type="text" id="chatInput" placeholder="Ask me anything about Anubhav..." autocomplete="off">
+                <button id="sendMessage" class="send-btn">
+                    <span1 ><i class="fa-notdog fa-solid fa-paper-plane fa-beat-fade fa-xl" style="color: #B197FC;"></i></span1>
+                </button>
+            </div>
+            <div class="quick-questions">
+                <button class="quick-btn" data-question="Who Is Anubhav Singh">Who ?</button>
+                <button class="quick-btn" data-question="Tell me about  projects">Projects</button>
+                <button class="quick-btn" data-question="What are his technical skills?">Skills</button>
+                <button class="quick-btn" data-question="How can I contact him?">Contact</button>
+                <button class="quick-btn" data-question="More Questions">Other Question</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Project Details Modal -->
+    <div class="modal hidden" id="projectModal">
+        <div class="modal-overlay"></div>
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="modalTitle">Project Details</h3>
+                <button class="modal-close" id="modalClose">&times;</button>
+            </div>
+            <div class="modal-body" id="modalBody">
+                <!-- Project details will be populated here -->
+            </div>
+        </div>
+    </div>
+
 <div class="responsive-design">
   <h1>USE DIFFRENT DEVICE FOR BETTER EXPERIENCE</h1>
 </div>
