--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@ My achievements include building and deploying over 15 full-stack web projects, 
                                 <label for="email">Email</label>
                             </div>
                             <div class="input-container">
-                                <input type="tel" class="input" name="phone" id="phone" />
+                                <input type="number" class="input" name="phone" id="phone" />
                                 <label for="phone">Phone</label>
                             </div>
                             <div class="input-container">
