--- a/index.html
+++ b/index.html
@@ -801,10 +801,10 @@ My achievements include building and deploying over 15 full-stack web projects, 
                     <div class="card-particles"></div>
                 </div>
             </div>
-        <div class="more-projects">
-        <h2>More Projects</h2>
-        <a href="https://github.com/anubhavsingh2027" target="_blank"> Click</a>
-        </div>
+    <div class="more-projects">
+    <h2>More Projects</h2>
+    <a href="https://github.com/anubhavsingh2027" target="_blank"> Click</a>
+    </div>
     </section>
     <section id="services" class="services">
         <div class="container">
@@ -815,7 +815,7 @@ My achievements include building and deploying over 15 full-stack web projects, 
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-icon">
-                        <i class="fas fa-code"></i>
+                        <i class="fas fa-code" style="color: black;"></i>
                     </div>
                     <div class="service-content">
                         <h3 class="service-title">Web Development</h3>
@@ -833,7 +833,7 @@ My achievements include building and deploying over 15 full-stack web projects, 
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <i class="fas fa-bolt"></i>
+                        <i class="fas fa-bolt" style="color: black;"></i>
                     </div>
                     <div class="service-content">
                         <h3 class="service-title">Algorithm Optimization</h3>
@@ -905,7 +905,7 @@ My achievements include building and deploying over 15 full-stack web projects, 
                         <div class="contact-details">
                             <h4>Phone</h4>
                             <p>7355026966</p>
-                            <span class="contact-label">Call me anytime</span>
+
                         </div>
                     </div>
                     </a>
@@ -918,7 +918,7 @@ My achievements include building and deploying over 15 full-stack web projects, 
                                                 <div class="contact-details">
                                                     <h4>Email</h4>
                                                     <p>anubhavsingh2027@gmail.com</p>
-                                                    <span class="contact-label">Send me an email</span>
+
                                                 </div>
                                             </div>
                         </a>
@@ -930,8 +930,7 @@ My achievements include building and deploying over 15 full-stack web projects, 
                                </div>
                               <div class="contact-details">
                                 <h4>Whatsapp</h4>
-                                 <p>Anubhav Singh</p>
-                                 <span class="contact-label">Send me an Direct Whatsapp Message</span>
+                                 <p>Send Me Direct Whatsapp Message</p>
                                  </div>
                            </div>
                         </a>
@@ -942,8 +941,7 @@ My achievements include building and deploying over 15 full-stack web projects, 
                         </div>
                         <div class="contact-details">
                             <h4>Location</h4>
-                            <p>India</p>
-                            <span class="contact-label">Remote work available</span>
+                            <p>Remote work also available</p>
                         </div>
                     </div>
                     <div class="social-media-hub">
@@ -980,23 +978,23 @@ My achievements include building and deploying over 15 full-stack web projects, 
                         <form class="contact-form" id="contactForm" >
                             <div class="input-container">
                                 <input type="text" class="input" name="username" id="username" required />
-                                <label for="username">Username</label>
+                                <label for="username" class="ldata">Username</label>
                             </div>
                             <div class="input-container">
                                 <input type="email" class="input" name="email" id="email" required />
-                                <label for="email">Email</label>
+                                <label for="email" class="ldata">Email</label>
                             </div>
                             <div class="input-container">
                                 <input type="number" class="input" name="phone" id="phone" />
-                                <label for="phone">Phone</label>
+                                <label for="phone" class="ldata">Phone</label>
                             </div>
                             <div class="input-container">
                                 <input type="text" class="input" name="subject" id="subject" required />
-                                <label for="subject" id="datas">Subject</label>
+                                <label for="subject" id="datas" class="ldata">Subject</label>
                             </div>
                             <div class="input-container textarea">
                             <textarea class="input" id="message"  required></textarea>
-                            <label for="subject" id="datas">Message</label>
+                            <label for="subject" id="datas" class="ldata">Message</label>
                             </div>
                             <div class="submit-btn">
                                 <button type="submit" class="btn btn--primary btn--animated">
