--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="hero-image">
                    <div class="image-container">
-                        <img  src="image/Anubhavsingh.jpg" alt="Anubhav Singh">
+                        <img  src="image/anubhav.png" alt="Anubhav Singh">
                         <span class="tech react">React</span>
                         <span class="tech cpp">C++</span>
                         <span class="tech html">HTML</span>
@@ -142,7 +142,7 @@ My achievements include building and deploying over 15 full-stack web projects, 
                 </div>
                 <div class="about-image">
                     <div class="image-frame">
-                    <img id="temp" src="image/Anubhavsingh.jpg" alt="Anubhav Singh">
+                    <img id="temp" src="image/Anubhavsingh.png" alt="Anubhav Singh">
                     </div>
                 </div>
             </div>
