--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 <body>
+    <div class="intro-overlay"></div>
+    <section class="intro-section">
+        <div class="intro-content">
+            <h3 class="greeting">👋 Welcome to My Portfolio</h3>
+            <h1 class="name">Hi, I'm Anubhav Singh</h1>
+            <div class="role-wrapper">
+                <p class="roles">Full Stack Developer | MERN Developer | AI Enthusiast</p>
+                <div class="name-underline"></div>
+            </div>
+        </div>
+    </section>
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <div class="nav-logo">
