improve Project section and  readme

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="hero-image">
                    <div class="image-container">
-                        <img  src="image/anubhav.png" alt="Anubhav Singh">
+                        <img  src="image/anubhav1.png" alt="Anubhav Singh">
                         <span class="tech react">React</span>
                         <span class="tech cpp">C++</span>
                         <span class="tech html">HTML</span>
@@ -155,7 +155,7 @@ My achievements include building and deploying over 15 full-stack web projects, 
                 </div>
                 <div class="about-image">
                     <div class="image-frame">
-                    <img id="temp" src="image/Anubhavsingh.png" alt="Anubhav Singh">
+                    <img id="temp" src="image/anubhavsingh.jpg" alt="Anubhav Singh">
                     </div>
                 </div>
             </div>
@@ -393,12 +393,12 @@ My achievements include building and deploying over 15 full-stack web projects, 
                 </button>
                 <button class="filter-btn" data-filter="fullStack" data-count="3">
                     <span class="filter-text">Full Stack</span>
-                    <span class="filter-count">3</span>
+                    <span class="filter-count">2</span>
                     <div class="filter-glow"></div>
                 </button>
                 <button class="filter-btn" data-filter="mern" data-count="1">
                     <span class="filter-text">MERN Stack</span>
-                    <span class="filter-count">1</span>
+                    <span class="filter-count">2</span>
                     <div class="filter-glow"></div>
                 </button>
                 <button class="filter-btn" data-filter="frontend" data-count="2">
