--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@ My achievements include building and deploying over 15 full-stack web projects, 
                                     <span class="completion-text">95% Complete</span>
                                 </div>
                                 <div  class="project-links">
-                                        <a href="https://airbnb-5lym.onrender.com/" class="project-link enhanced-link" target="_blank">
+                                        <a href="https://airbnb-clone-1u1y.onrender.com/" class="project-link enhanced-link" target="_blank">
                                             <i class="fas fa-external-link-alt"></i>
                                             <span>View Project</span>
                                         </a>
@@ -770,7 +770,7 @@ My achievements include building and deploying over 15 full-stack web projects, 
                                     <i class="fab fa-css3-alt tech-icon"></i>
                                 </div>
                                 <div   class="project-links">
-                                        <a href="https://airbnb-5lym.onrender.com/" class="project-link enhanced-link" target="_blank">
+                                        <a href="https://airbnb-clone-1u1y.onrender.com/" class="project-link enhanced-link" target="_blank">
                                             <i class="fas fa-external-link-alt"></i>
                                             <span>View Project</span>
                                         </a>
