--- a/index.html
+++ b/index.html
@@ -336,38 +336,77 @@ My achievements include building and deploying over 15 full-stack web projects, 
                     <h3 class="category-title">Tools</h3>
                     <div class="skill-grid">
                         <div class="skill-item" data-skill="90">
-                            <div class="skill-icon">
-                                <img src="https://img.icons8.com/color/48/000000/visual-studio-code-2019.png" alt="VS Code">
-                            </div>
-                            <div class="skill-info">
-                                <span class="skill-name">VS Code</span>
-                                <div class="progress-bar">
-                                    <div class="progress-fill" style="--width: 90%"></div>
-                                </div>
+                        <div class="skill-icon">
+                            <img src="https://img.icons8.com/color/48/000000/visual-studio-code-2019.png" alt="VS Code">
+                        </div>
+                        <div class="skill-info">
+                            <span class="skill-name">VS Code</span>
+                            <div class="progress-bar">
+                                <div class="progress-fill" style="--width: 90%"></div>
                             </div>
                         </div>
-                        <div class="skill-item" data-skill="85">
-                            <div class="skill-icon">
-                                <img src="https://img.icons8.com/color/48/000000/git.png" alt="Git">
-                            </div>
-                            <div class="skill-info">
-                                <span class="skill-name">Git</span>
-                                <div class="progress-bar">
-                                    <div class="progress-fill" style="--width: 85%"></div>
-                                </div>
+                    </div>
+
+                    <div class="skill-item" data-skill="85">
+                        <div class="skill-icon">
+                            <img src="https://img.icons8.com/color/48/000000/git.png" alt="Git">
+                        </div>
+                        <div class="skill-info">
+                            <span class="skill-name">Git</span>
+                            <div class="progress-bar">
+                                <div class="progress-fill" style="--width: 85%"></div>
                             </div>
                         </div>
-                        <div class="skill-item" data-skill="85">
-                            <div class="skill-icon">
-                                <img src="https://toppng.com/uploads/preview/github-logo-11609362429jyqzrkf6k1.png" alt="GitHub">
-                            </div>
-                            <div class="skill-info">
-                                <span class="skill-name">GitHub</span>
-                                <div class="progress-bar">
-                                    <div class="progress-fill" style="--width: 85%"></div>
-                                </div>
+                    </div>
+
+                    <div class="skill-item" data-skill="85">
+                        <div class="skill-icon">
+                            <img src="https://toppng.com/uploads/preview/github-logo-11609362429jyqzrkf6k1.png" alt="GitHub">
+                        </div>
+                        <div class="skill-info">
+                            <span class="skill-name">GitHub</span>
+                            <div class="progress-bar">
+                                <div class="progress-fill" style="--width: 85%"></div>
                             </div>
                         </div>
+                    </div>
+
+                    <div class="skill-item" data-skill="80">
+                        <div class="skill-icon">
+                            <img src="https://img.icons8.com/color/48/000000/docker.png" alt="Docker">
+                        </div>
+                        <div class="skill-info">
+                            <span class="skill-name">Docker</span>
+                            <div class="progress-bar">
+                                <div class="progress-fill" style="--width: 80%"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="skill-item" data-skill="75">
+                        <div class="skill-icon">
+                            <img src="https://img.icons8.com/color/48/000000/amazon-web-services.png" alt="AWS">
+                        </div>
+                        <div class="skill-info">
+                            <span class="skill-name">AWS</span>
+                            <div class="progress-bar">
+                                <div class="progress-fill" style="--width: 75%"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="skill-item" data-skill="85">
+                        <div class="skill-icon">
+                            <img src="https://img.icons8.com/external-tal-revivo-color-tal-revivo/48/null/external-postman-is-the-only-complete-api-development-environment-logo-color-tal-revivo.png" alt="Postman">
+                        </div>
+                        <div class="skill-info">
+                            <span class="skill-name">Postman</span>
+                            <div class="progress-bar">
+                                <div class="progress-fill" style="--width: 85%"></div>
+                            </div>
+                        </div>
+                    </div>
+
                     </div>
                 </div>
             </div>
