--- a/index.html
+++ b/index.html
@@ -330,6 +330,17 @@ My achievements include building and deploying over 15 full-stack web projects, 
                                 </div>
                             </div>
                         </div>
+                        <div class="skill-item" data-skill="88">
+                            <div class="skill-icon">
+                                <img src="https://img.icons8.com/color/48/000000/javascript--v1.png" alt="JavaScript">
+                            </div>
+                            <div class="skill-info">
+                                <span class="skill-name">JavaScript</span>
+                                <div class="progress-bar">
+                                    <div class="progress-fill" style="--width: 88%"></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="skill-category">
