--- a/index.html
+++ b/index.html
@@ -905,10 +905,7 @@ My achievements include building and deploying over 15 full-stack web projects, 
                     <div class="card-particles"></div>
                 </div>
 
-
-
-
-
+                <!-- ==========Project End================= -->
 
             </div>
     <div class="more-projects">
