--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anubhav Singh - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="voice-styles.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/voice-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -1289,7 +1289,7 @@ My achievements include building and deploying over 15 full-stack web projects, 
         </div>
     </div>
 
-    <script src="app.js"></script>
-    <script src="voice-assistant.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/voice-assistant.js"></script>
 </body>
 </html>
