integrate with backend

--- a/index.html
+++ b/index.html
@@ -1286,6 +1286,8 @@ My achievements include building and deploying over 15 full-stack web projects, 
             </div>
         </div>
     </div>
+
+    <!-- new adding feature -->
     <script src="/js/app.js"></script>
     <script src="/js/voice-assistant.js"></script>
 </body>
