--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,16 @@
                 </div>
                 <div class="contact-form-container">
                     <div class="form-tabs">
-                        <button class="tab-btn active" data-tab="contact">Contact Form</button>
+                        <button class="tab-btn active" data-tab="contact">
+                            Contact Form
+                            <span class="status-badge">
+                                <span class="status-dot"></span>
+                                <span class="status-text">Active</span>
+                            </span>
+                            <span class="message-counter" id="messageCounter" style="display: none;">
+                                <span class="counter-badge" id="counterBadge">0</span>
+                            </span>
+                        </button>
                     </div>
                     <div class="contact-form" id="contact-tab">
                         <form class="contact-form" id="contactForm" >
