--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
                             My achievements include building and deploying over 15 full-stack web projects, solving 500+ coding problems on LeetCode, and earning a 5-Star rating in C++ on HackerRank.
                     </p>
                     <p class="about-description">
-                        My journey in software development has led me to work with amazing companies like Amazon, Microsoft, and Google,
-                        where I've honed my skills in both frontend and backend technologies.
+                        My journey in software development has led me to work with amazing companies like Amazon, Microsoft, and Google,where I've honed my skills in both frontend and backend technologies.
                     </p>
                     <div class="stats-container">
                         <div class="stat-item">
@@ -1351,7 +1350,7 @@
         </div>
     </div>
 
-    
+
     <script src="/js/app.js"></script>
     <script src="/js/voice-assistant.js"></script>
 </body>
