--- a/index.html
+++ b/index.html
@@ -1220,9 +1220,9 @@
                 </div>
             </div>
             <div class="footer-info">
-                
+
                 <p class="made-with-love">
-                    Made with <span class="animated-heart">❤️</span> by <span class="typing-name">Anubhav Singh</span>
+                    Made <span class="animated-heart">❤️</span> by <span class="typing-name">Anubhav Singh</span>
                 </p>
             </div>
         </div>
