--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
                 <a href="https://t.me/Anubhav_singh7355" class="social-icon" target="_blank">
                     <i class="fab fa-telegram-plane"></i>
                 </a>
-                <a href="https://instagram.com/anubhav_singh0506
-" class="social-icon" target="_blank">
-                    <i class="fab fa-instagram"></i>
+                <a href="https://www.hackerrank.com/profile/anubhavsingh2027" class="social-icon" target="_blank">
+                    <i class="fa-brands fa-hackerrank fa-lg"></i>
                 </a>
             </div>
         </div>
@@ -1213,8 +1212,8 @@
                         <i class="fab fa-telegram-plane"></i>
                         <div class="orbit-ring"></div>
                     </a>
-                    <a href="https://instagram.com/anubhav_singh0506" class="social-orbit instagram" target="_blank">
-                        <i class="fab fa-instagram"></i>
+                    <a href="https://www.hackerrank.com/profile/anubhavsingh2027" class="social-orbit hackerrank" target="_blank">
+                        <i class="fa-brands fa-hackerrank fa-lg"></i>
                         <div class="orbit-ring"></div>
                     </a>
                 </div>
