--- a/index.html
+++ b/index.html
@@ -1350,7 +1350,6 @@
     </div>
 
 
-    <script src="/js/app.js"></script>
-    <script src="/js/voice-assistant.js"></script>
+    <script src="/js/app.js"></script><script src="/js/voice-assistant.js"></script>
 </body>
 </html>
