--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@
         </div>
     </div>
 
-    <!-- Mode Selection Modal -->
+    <!--  Modal Selection -->
     <div class="mode-selection-modal" id="modeModal">
         <div class="mode-selection-content">
             <h2>Choose Your Experience</h2>
