--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
                 </div>
 
 
-<!-- === Portfolio ==== -->
+<!-- === personal Portfolio ==== -->
 
 <div class="project-card enhanced-card magnetic-hover" data-category="frontend" data-completion="100">
                     <div class="card-inner">
