--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anubhav Singh - Portfolio</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/voice-styles.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -1287,6 +1286,6 @@
             </div>
         </div>
     </div>
-    <script src="/js/app.js"></script><script src="/js/voice-assistant.js"></script>
+    <script src="js/app.js" type="module"></script>
 </body>
 </html>
