--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1053,9 +1053,9 @@
                     <div class="form-tabs">
                         <button class="tab-btn active" data-tab="contact">
                             Contact Form
-                            <span class="status-badge">
+                            <span class="status-badge" id="activeon" style="background-color: red;">
                                 <span class="status-dot"></span>
-                                <span class="status-text">Active</span>
+                                <span class="status-text">Server Loading...</span>
                             </span>
                             <span class="message-counter" id="messageCounter" style="display: none;">
                                 <span class="counter-badge" id="counterBadge">0</span>
@@ -1193,13 +1193,6 @@
                     <span ><i class="fa-solid fa-share fa-bounce" style="color: #ffffff;"></i></span>
                 </button>
             </div>
-            <div class="quick-questions">
-                <button class="quick-btn" data-question="Who Is Anubhav Singh">Who ?</button>
-                <button class="quick-btn" data-question="Tell me about  projects">Projects</button>
-                <button class="quick-btn" data-question="What are his technical skills?">Skills</button>
-                <button class="quick-btn" data-question="How can I contact him?">Contact</button>
-                <button class="quick-btn" data-question="More Questions">Other Question</button>
-            </div>
         </div>
     </div>
     <div class="modal hidden" id="projectModal">
@@ -1250,7 +1243,7 @@
                 <div class="mic-pulse"></div>
                 <div class="mic-pulse-2"></div>
                 <div class="mic-circle" id="micCircle">
-                    <i class="fas fa-microphone"></i>
+                    <i class="fas fa-microphone" id="circleIcon"></i>
                 </div>
             </div>
             <p class="voice-prompt" id="voicePrompt">Tap the microphone to speak</p>
